# C7_s21_SmartCalc

./: LICENSE  README.md  README_RUS.md  TASK.md  TASK_RUS.md  s21_calendar_credit.c  s21_calendar_deposit.c
src/: CMakeLists.txt  Dockerfile  Doxyfile  Makefile  main.c  s21_smartcalc.h
src/C_part/: C_funcs.h  Makefile  parser.c  test_pars.c
src/calculations/: Makefile  main.h  test
src/calculations/dynamic/: main.h
src/calculations/dynamic/s21_main/: main.c  math_operations.c  validation.c
src/calculations/dynamic/tests/: testing.c
src/calculations/functions/: checks.c  comparison.c  main.c  math_operations.c  notation.c  validation.c
src/calculations/functions/cpp_addition/: unar_operation.c
src/calculations/s21_additional/: unar_operation.c
src/calculations/s21_credit/: main.c
src/calculations/s21_main/: checks.c  comparison.c  main.c  math_operations.c  notation.c  validation.c
src/calculations/tests/: main_test.c  testing.c
src/gui_modules/: graphics.cpp  graphics.h  graphics.ui  main.cpp  my_widget.cpp  my_widget.h  my_widget.ui  qcustomplot.h  s21_credit.cpp  s21_credit.h  s21_credit.ui  s21_deposit.cpp  s21_deposit.h  s21_deposit.ui  s21_smartcalc.cpp  s21_smartcalc.h  s21_smartcalc.pro  s21_smartcalc.ui  smartcalc.pro
src/gui_modules/cpp_modules/: credit.cpp  credit_table.cpp  deposit.cpp  graphics.cpp  main.cpp  my_widget.cpp  qcustomplot.cpp  s21_credit.cpp  s21_credit_table.cpp  s21_deposit.cpp  s21_smartcalc.cpp  smartcalc.cpp
src/gui_modules/include/: credit.h  credit_table.h  deposit.h  graphics.h  my_widget.h  s21_credit.h  s21_credit_table.h  s21_deposit.h  s21_smartcalc.h  smartcalc.h
src/gui_modules/ui_modules/: credit.ui  credit_table.ui  deposit.ui  my_widget.ui  s21_credit.ui  s21_credit_table.ui  s21_deposit.ui  s21_smartcalc.ui  smartcalc.ui
src/modules/: s21_smartcalc.h  smartcalc.h
src/modules/calculator/: calculator.c  checks.c  comparison.c  math_operations.c  notation.c  unar_operation.c  validation.c
src/modules/common/: calendar.c  common.c
src/modules/credit/: calc_payments.c  credit.c  redemption.c
src/modules/deposit/: calc_deposits.c  deposit.c  payments.c  taxes.c
src/modules/include/: calculator.h  common.h  credit.h  deposit.h  s21_calculator.h  s21_common.h  s21_credit.h  s21_deposit.h
src/modules/s21_calculator/: s21_calculator.c  s21_checks.c  s21_comparison.c  s21_math_operations.c  s21_notation.c  s21_unar_operation.c  s21_validation.c
src/modules/s21_common/: s21_calendar.c  s21_common.c
src/modules/s21_credit/: s21_calc_payments.c  s21_credit.c  s21_redemption.c
src/modules/s21_deposit/: s21_calc_deposits.c  s21_deposit.c  s21_payments.c  s21_taxes.c
src/s21_backend/: s21_debug.c  s21_main.h
src/s21_backend/s21_calculator/: s21_calculator.c  s21_calculator.h  s21_checks.c  s21_comparison.c  s21_math_operations.c  s21_notation.c  s21_unar_operation.c  s21_validation.c
src/s21_backend/s21_common/: s21_calendar.c  s21_common.c  s21_common.h
src/s21_backend/s21_credit/: s21_calc_payments.c  s21_credit.c  s21_credit.h  s21_redemption.c  s21_supporting.c
src/s21_backend/s21_deposit/: s21_calc_deposits.c  s21_deposit.c  s21_deposit.h  s21_payments.c  s21_taxes.c
src/s21_backend/s21_tests/: s21_calc_test.c  s21_deposit_test.c  s21_main_test.c  s21_test.h  s21_test_funs.c
src/s21_calculations/: s21_debug.c  s21_main.h  s21_testing.c
src/s21_calculations/s21_calc/: s21_calc.c  s21_calc.h  s21_checks.c  s21_comparison.c  s21_math_operations.c  s21_notation.c  s21_unar_operation.c  s21_validation.c
src/s21_calculations/s21_calculator/: s21_calc.h  s21_checks.c  s21_math_operations.c  s21_notation.c  s21_validation.c
src/s21_calculations/s21_calendar/: s21_calendar.c  s21_calendar.h
src/s21_calculations/s21_common/: s21_calendar.c  s21_common.c  s21_common.h
src/s21_calculations/s21_credit/: s21_annuity.c  s21_calc_payments.c  s21_calendar.c  s21_credit.c  s21_credit.h  s21_differentiated.c  s21_redemption.c  s21_supporting.c
src/s21_calculations/s21_deposit/: s21_calc_deposits.c  s21_calendar.c  s21_deposit.c  s21_deposit.h  s21_supporting.c
src/s21_calculations/s21_tests/: s21_calc_test.c  s21_credit_test.c  s21_deposit_test.c  s21_main_test.c  s21_test.h  s21_test_funs.c
src/s21_frontend/: graphics.cpp  graphics.h  main.cpp  my_widget.cpp  my_widget.h  my_widget.ui  s21_credit.cpp  s21_credit.h  s21_credit.ui  s21_credit_table.cpp  s21_credit_table.ui  s21_deposit.cpp  s21_deposit.h  s21_deposit.ui  s21_smartcalc.cpp  s21_smartcalc.h  s21_smartcalc.pro  s21_smartcalc.ui
src/s21_pics/: resource.qrc
src/s21_smartcalc/: CMakeLists.txt  graphics.cpp  graphics.h  graphics.ui  journal.ui  main.cpp  my_widget.cpp  my_widget.h  my_widget.ui  qcustomplot.cpp  s21_credit.cpp  s21_credit.h  s21_credit.ui  s21_credit_table.cpp  s21_credit_table.ui  s21_deposit.cpp  s21_deposit.h  s21_deposit.ui  s21_smartcalc.cpp  s21_smartcalc.h  s21_smartcalc.pro  s21_smartcalc.ui  unar_operation.c
src/s21_smartcalc/s21_additional/: unar_operation.c
src/s21_smartcalc/s21_credit/: s21_credit.cpp  s21_credit.ui
src/s21_smartcalc/s21_deposit/: s21_deposit.cpp  s21_deposit.h
src/s21_smartcalc/s21_main/: main.cpp  s21_smartcalc.cpp  s21_smartcalc.h  s21_smartcalc.ui
src/s21_tests/: s21_credit_test.c  s21_main_test.c  s21_test.h
src/smartcalc/: main.cpp  moc_smartcalc.cpp  smartcalc.cpp  smartcalc.h  smartcalc.pro  smartcalc.ui  ui_smartcalc.h
src/tests/: main.c  s21_tests.c  s21_tests.h  tests.c  tests.h
src/tests/debug/: debug.c  debug.h
src/tests/test_modules/: s21_test_credit.c  s21_test_deposit.c  s21_test_smartcalc.c  test_credit.c  test_deposit.c  test_smartcalc.c
src/tests/test_modules/test_include/: s21_test_credit.h  s21_test_deposit.h  s21_test_smartcalc.h  test_credit.h  test_deposit.h  test_smartcalc.h
